# throttled-py-fastapi-integration

./: Dockerfile  Makefile  README.md  app.py  docker-compose.yml  main.py  metric.md  metric_check.py  metric_check_fixed_window.py  metric_check_gcra.py  metric_check_leaking_bucket.py  metric_check_sliding_window.py  metric_check_token_bucket.py  otel-collector-config.yaml  pyproject.toml  scenario.md  scenario.sh  scenario_fixed_window.sh  scenario_gcra.sh  scenario_leaking_bucket.sh  scenario_sliding_window.sh  scenario_token_bucket.sh
docs/: metric.md  metric_explanation_fixed_window.md  metric_explanation_gcra.md  metric_explanation_leaking_bucket.md  metric_explanation_sliding_window.md  metric_explanation_token_bucket.md  scenario.md
grafana/dashboards/: throttled.json
